compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> PROGRAM variables_opt main_func block
Rule 2     variables_opt -> empty
Rule 3     variables_opt -> variables
Rule 4     main_func -> empty
Rule 5     main_func -> function main_func
Rule 6     block -> { block_stm_opt }
Rule 7     block_stm_opt -> empty
Rule 8     block_stm_opt -> statement block_stm_opt
Rule 9     statement -> assignation
Rule 10    statement -> condition
Rule 11    statement -> iteration
Rule 12    statement -> function_call
Rule 13    variables -> VARIABLE : var_body
Rule 14    var_body -> var_opts var_id ; var_body_rec
Rule 15    var_body_rec -> empty
Rule 16    var_body_rec -> var_body
Rule 17    var_opts -> base_type
Rule 18    var_opts -> ARRAY FROM base_type FROM id_or_number
Rule 19    var_id -> ID var_id_rec
Rule 20    var_id_rec -> empty
Rule 21    var_id_rec -> , var_id
Rule 22    assignation -> ID = expression
Rule 23    condition -> cond_if cond_else_if_opt cond_else_opt
Rule 24    cond_if -> IF HAPPENS ( expression ) DO block
Rule 25    cond_else_if_opt -> empty
Rule 26    cond_else_if_opt -> cond_else_if cond_else_if_opt
Rule 27    cond_else_if -> OR IF HAPPENS ( expression ) DO block
Rule 28    cond_else_opt -> empty
Rule 29    cond_else_opt -> ELSE HAPPENS block
Rule 30    iteration -> iteration_opts ) DO block
Rule 31    iteration_opts -> WHILE HAPPENS ( expression
Rule 32    iteration_opts -> FOR ( id_or_number
Rule 33    function -> function_declaration ( function_params ) { function_variables_opt function_stm function_return }
Rule 34    function_declaration -> function_type FUNCTION ID
Rule 35    function_variables_opt -> empty
Rule 36    function_variables_opt -> variables
Rule 37    function_type -> empty
Rule 38    function_type -> type
Rule 39    function_params -> empty
Rule 40    function_params -> type ID function_params_rec
Rule 41    function_params_rec -> empty
Rule 42    function_params_rec -> , function_params
Rule 43    function_stm -> empty
Rule 44    function_stm -> statement function_stm
Rule 45    function_return -> empty
Rule 46    function_return -> RETURN expression
Rule 47    function_call -> read
Rule 48    function_call -> print
Rule 49    function_call -> local_function
Rule 50    function_call -> list_push
Rule 51    function_call -> list_pop
Rule 52    read -> READ ( base_type ID )
Rule 53    print -> PRINT ( expr_params )
Rule 54    expr_params -> empty
Rule 55    expr_params -> expression expr_params_rec
Rule 56    expr_params_rec -> empty
Rule 57    expr_params_rec -> , expr_params
Rule 58    local_function -> ID ( expr_params )
Rule 59    list_push -> PUSH TO ID ( expression )
Rule 60    list_pop -> POP LAST FROM ID ( )
Rule 61    list_access -> ID [ id_or_number ]
Rule 62    random -> RANDOM ( FROM CONST_I , TO CONST_I )
Rule 63    expression -> exp_comp expression_opt
Rule 64    expression_opt -> empty
Rule 65    expression_opt -> logic_operators expression
Rule 66    exp_comp -> exp_add exp_comp_opt
Rule 67    exp_comp_opt -> empty
Rule 68    exp_comp_opt -> comp_operators exp_comp
Rule 69    exp_add -> exp_multiply exp_add_opt
Rule 70    exp_add_opt -> empty
Rule 71    exp_add_opt -> add_operators exp_add
Rule 72    exp_multiply -> term exp_multiply_opt
Rule 73    exp_multiply_opt -> empty
Rule 74    exp_multiply_opt -> multiply_operators exp_multiply
Rule 75    term -> term_nested
Rule 76    term -> term_body
Rule 77    term_nested -> ( expression )
Rule 78    term_body -> term_body_opt term_body_types
Rule 79    term_body_opt -> empty
Rule 80    term_body_opt -> +
Rule 81    term_body_opt -> -
Rule 82    term_body_types -> ID
Rule 83    term_body_types -> term_body_types_rest
Rule 84    term_body_types_rest -> CONST_I term_int_add_stk
Rule 85    term_body_types_rest -> CONST_F term_float_add_stk
Rule 86    term_body_types_rest -> CONST_S term_string_add_stk
Rule 87    term_body_types_rest -> TRUE term_bool_add_stk
Rule 88    term_body_types_rest -> FALSE term_bool_add_stk
Rule 89    term_body_types_rest -> random
Rule 90    term_body_types_rest -> list_access
Rule 91    term_body_types_rest -> function_call
Rule 92    term_int_add_stk -> empty
Rule 93    term_float_add_stk -> empty
Rule 94    term_string_add_stk -> empty
Rule 95    term_bool_add_stk -> empty
Rule 96    type -> base_type
Rule 97    type -> ARRAY FROM base_type
Rule 98    id_or_number -> ID
Rule 99    id_or_number -> CONST_I
Rule 100   base_type -> INT
Rule 101   base_type -> FLOAT
Rule 102   base_type -> STRING
Rule 103   base_type -> BOOLEAN
Rule 104   logic_operators -> AND
Rule 105   logic_operators -> OR
Rule 106   comp_operators -> <
Rule 107   comp_operators -> >
Rule 108   comp_operators -> EQ
Rule 109   comp_operators -> NEQ
Rule 110   comp_operators -> GTE
Rule 111   comp_operators -> LTE
Rule 112   multiply_operators -> *
Rule 113   multiply_operators -> /
Rule 114   add_operators -> +
Rule 115   add_operators -> -
Rule 116   empty -> <empty>

Terminals, with rules where they appear

(                    : 24 27 31 32 33 52 53 58 59 60 62 77
)                    : 24 27 30 33 52 53 58 59 60 62 77
*                    : 112
+                    : 80 114
,                    : 21 42 57 62
-                    : 81 115
/                    : 113
:                    : 13
;                    : 14
<                    : 106
=                    : 22
>                    : 107
AND                  : 104
ARRAY                : 18 97
BOOLEAN              : 103
CONST_F              : 85
CONST_I              : 62 62 84 99
CONST_S              : 86
DO                   : 24 27 30
ELSE                 : 29
EQ                   : 108
FALSE                : 88
FLOAT                : 101
FOR                  : 32
FROM                 : 18 18 60 62 97
FUNCTION             : 34
GTE                  : 110
HAPPENS              : 24 27 29 31
ID                   : 19 22 34 40 52 58 59 60 61 82 98
IF                   : 24 27
INT                  : 100
LAST                 : 60
LTE                  : 111
NEQ                  : 109
OR                   : 27 105
POP                  : 60
PRINT                : 53
PROGRAM              : 1
PUSH                 : 59
RANDOM               : 62
READ                 : 52
RETURN               : 46
STRING               : 102
TO                   : 59 62
TRUE                 : 87
VARIABLE             : 13
WHILE                : 31
[                    : 61
]                    : 61
error                : 
{                    : 6 33
}                    : 6 33

Nonterminals, with rules where they appear

add_operators        : 71
assignation          : 9
base_type            : 17 18 52 96 97
block                : 1 24 27 29 30
block_stm_opt        : 6 8
comp_operators       : 68
cond_else_if         : 26
cond_else_if_opt     : 23 26
cond_else_opt        : 23
cond_if              : 23
condition            : 10
empty                : 2 4 7 15 20 25 28 35 37 39 41 43 45 54 56 64 67 70 73 79 92 93 94 95
exp_add              : 66 71
exp_add_opt          : 69
exp_comp             : 63 68
exp_comp_opt         : 66
exp_multiply         : 69 74
exp_multiply_opt     : 72
expr_params          : 53 57 58
expr_params_rec      : 55
expression           : 22 24 27 31 46 55 59 65 77
expression_opt       : 63
function             : 5
function_call        : 12 91
function_declaration : 33
function_params      : 33 42
function_params_rec  : 40
function_return      : 33
function_stm         : 33 44
function_type        : 34
function_variables_opt : 33
id_or_number         : 18 32 61
iteration            : 11
iteration_opts       : 30
list_access          : 90
list_pop             : 51
list_push            : 50
local_function       : 49
logic_operators      : 65
main                 : 0
main_func            : 1 5
multiply_operators   : 74
print                : 48
random               : 89
read                 : 47
statement            : 8 44
term                 : 72
term_body            : 76
term_body_opt        : 78
term_body_types      : 78
term_body_types_rest : 83
term_bool_add_stk    : 87 88
term_float_add_stk   : 85
term_int_add_stk     : 84
term_nested          : 75
term_string_add_stk  : 86
type                 : 38 40
var_body             : 13 16
var_body_rec         : 14
var_id               : 14 21
var_id_rec           : 19
var_opts             : 14
variables            : 3 36
variables_opt        : 1

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . PROGRAM variables_opt main_func block

    PROGRAM         shift and go to state 1

    main                           shift and go to state 2

state 1

    (1) main -> PROGRAM . variables_opt main_func block
    (2) variables_opt -> . empty
    (3) variables_opt -> . variables
    (116) empty -> .
    (13) variables -> . VARIABLE : var_body

    ARRAY           reduce using rule 116 (empty -> .)
    INT             reduce using rule 116 (empty -> .)
    FLOAT           reduce using rule 116 (empty -> .)
    STRING          reduce using rule 116 (empty -> .)
    BOOLEAN         reduce using rule 116 (empty -> .)
    {               reduce using rule 116 (empty -> .)
    FUNCTION        reduce using rule 116 (empty -> .)
    VARIABLE        shift and go to state 4

    variables                      shift and go to state 3
    variables_opt                  shift and go to state 5
    empty                          shift and go to state 6

state 2

    (0) S' -> main .



state 3

    (3) variables_opt -> variables .

    ARRAY           reduce using rule 3 (variables_opt -> variables .)
    INT             reduce using rule 3 (variables_opt -> variables .)
    FLOAT           reduce using rule 3 (variables_opt -> variables .)
    STRING          reduce using rule 3 (variables_opt -> variables .)
    BOOLEAN         reduce using rule 3 (variables_opt -> variables .)
    {               reduce using rule 3 (variables_opt -> variables .)
    FUNCTION        reduce using rule 3 (variables_opt -> variables .)


state 4

    (13) variables -> VARIABLE . : var_body

    :               shift and go to state 7


state 5

    (1) main -> PROGRAM variables_opt . main_func block
    (4) main_func -> . empty
    (5) main_func -> . function main_func
    (116) empty -> .
    (33) function -> . function_declaration ( function_params ) { function_variables_opt function_stm function_return }
    (34) function_declaration -> . function_type FUNCTION ID
    (37) function_type -> . empty
    (38) function_type -> . type
    (96) type -> . base_type
    (97) type -> . ARRAY FROM base_type
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    {               reduce using rule 116 (empty -> .)
    FUNCTION        reduce using rule 116 (empty -> .)
    ARRAY           shift and go to state 10
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    function                       shift and go to state 13
    base_type                      shift and go to state 9
    function_declaration           shift and go to state 16
    function_type                  shift and go to state 8
    type                           shift and go to state 11
    main_func                      shift and go to state 19
    empty                          shift and go to state 12

state 6

    (2) variables_opt -> empty .

    ARRAY           reduce using rule 2 (variables_opt -> empty .)
    INT             reduce using rule 2 (variables_opt -> empty .)
    FLOAT           reduce using rule 2 (variables_opt -> empty .)
    STRING          reduce using rule 2 (variables_opt -> empty .)
    BOOLEAN         reduce using rule 2 (variables_opt -> empty .)
    {               reduce using rule 2 (variables_opt -> empty .)
    FUNCTION        reduce using rule 2 (variables_opt -> empty .)


state 7

    (13) variables -> VARIABLE : . var_body
    (14) var_body -> . var_opts var_id ; var_body_rec
    (17) var_opts -> . base_type
    (18) var_opts -> . ARRAY FROM base_type FROM id_or_number
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    ARRAY           shift and go to state 23
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    var_opts                       shift and go to state 20
    var_body                       shift and go to state 21
    base_type                      shift and go to state 22

state 8

    (34) function_declaration -> function_type . FUNCTION ID

    FUNCTION        shift and go to state 24


state 9

    (96) type -> base_type .

    FUNCTION        reduce using rule 96 (type -> base_type .)
    ID              reduce using rule 96 (type -> base_type .)


state 10

    (97) type -> ARRAY . FROM base_type

    FROM            shift and go to state 25


state 11

    (38) function_type -> type .

    FUNCTION        reduce using rule 38 (function_type -> type .)


state 12

    (4) main_func -> empty .
    (37) function_type -> empty .

    {               reduce using rule 4 (main_func -> empty .)
    FUNCTION        reduce using rule 37 (function_type -> empty .)


state 13

    (5) main_func -> function . main_func
    (4) main_func -> . empty
    (5) main_func -> . function main_func
    (116) empty -> .
    (33) function -> . function_declaration ( function_params ) { function_variables_opt function_stm function_return }
    (34) function_declaration -> . function_type FUNCTION ID
    (37) function_type -> . empty
    (38) function_type -> . type
    (96) type -> . base_type
    (97) type -> . ARRAY FROM base_type
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    {               reduce using rule 116 (empty -> .)
    FUNCTION        reduce using rule 116 (empty -> .)
    ARRAY           shift and go to state 10
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    function                       shift and go to state 13
    base_type                      shift and go to state 9
    function_declaration           shift and go to state 16
    function_type                  shift and go to state 8
    main_func                      shift and go to state 26
    type                           shift and go to state 11
    empty                          shift and go to state 12

state 14

    (102) base_type -> STRING .

    ID              reduce using rule 102 (base_type -> STRING .)
    FUNCTION        reduce using rule 102 (base_type -> STRING .)
    FROM            reduce using rule 102 (base_type -> STRING .)


state 15

    (103) base_type -> BOOLEAN .

    ID              reduce using rule 103 (base_type -> BOOLEAN .)
    FUNCTION        reduce using rule 103 (base_type -> BOOLEAN .)
    FROM            reduce using rule 103 (base_type -> BOOLEAN .)


state 16

    (33) function -> function_declaration . ( function_params ) { function_variables_opt function_stm function_return }

    (               shift and go to state 27


state 17

    (100) base_type -> INT .

    ID              reduce using rule 100 (base_type -> INT .)
    FUNCTION        reduce using rule 100 (base_type -> INT .)
    FROM            reduce using rule 100 (base_type -> INT .)


state 18

    (101) base_type -> FLOAT .

    ID              reduce using rule 101 (base_type -> FLOAT .)
    FUNCTION        reduce using rule 101 (base_type -> FLOAT .)
    FROM            reduce using rule 101 (base_type -> FLOAT .)


state 19

    (1) main -> PROGRAM variables_opt main_func . block
    (6) block -> . { block_stm_opt }

    {               shift and go to state 28

    block                          shift and go to state 29

state 20

    (14) var_body -> var_opts . var_id ; var_body_rec
    (19) var_id -> . ID var_id_rec

    ID              shift and go to state 31

    var_id                         shift and go to state 30

state 21

    (13) variables -> VARIABLE : var_body .

    ID              reduce using rule 13 (variables -> VARIABLE : var_body .)
    IF              reduce using rule 13 (variables -> VARIABLE : var_body .)
    WHILE           reduce using rule 13 (variables -> VARIABLE : var_body .)
    FOR             reduce using rule 13 (variables -> VARIABLE : var_body .)
    READ            reduce using rule 13 (variables -> VARIABLE : var_body .)
    PRINT           reduce using rule 13 (variables -> VARIABLE : var_body .)
    PUSH            reduce using rule 13 (variables -> VARIABLE : var_body .)
    POP             reduce using rule 13 (variables -> VARIABLE : var_body .)
    RETURN          reduce using rule 13 (variables -> VARIABLE : var_body .)
    }               reduce using rule 13 (variables -> VARIABLE : var_body .)
    ARRAY           reduce using rule 13 (variables -> VARIABLE : var_body .)
    INT             reduce using rule 13 (variables -> VARIABLE : var_body .)
    FLOAT           reduce using rule 13 (variables -> VARIABLE : var_body .)
    STRING          reduce using rule 13 (variables -> VARIABLE : var_body .)
    BOOLEAN         reduce using rule 13 (variables -> VARIABLE : var_body .)
    {               reduce using rule 13 (variables -> VARIABLE : var_body .)
    FUNCTION        reduce using rule 13 (variables -> VARIABLE : var_body .)


state 22

    (17) var_opts -> base_type .

    ID              reduce using rule 17 (var_opts -> base_type .)


state 23

    (18) var_opts -> ARRAY . FROM base_type FROM id_or_number

    FROM            shift and go to state 32


state 24

    (34) function_declaration -> function_type FUNCTION . ID

    ID              shift and go to state 33


state 25

    (97) type -> ARRAY FROM . base_type
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    base_type                      shift and go to state 34

state 26

    (5) main_func -> function main_func .

    {               reduce using rule 5 (main_func -> function main_func .)


state 27

    (33) function -> function_declaration ( . function_params ) { function_variables_opt function_stm function_return }
    (39) function_params -> . empty
    (40) function_params -> . type ID function_params_rec
    (116) empty -> .
    (96) type -> . base_type
    (97) type -> . ARRAY FROM base_type
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    )               reduce using rule 116 (empty -> .)
    ARRAY           shift and go to state 10
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    base_type                      shift and go to state 9
    function_params                shift and go to state 37
    type                           shift and go to state 36
    empty                          shift and go to state 35

state 28

    (6) block -> { . block_stm_opt }
    (7) block_stm_opt -> . empty
    (8) block_stm_opt -> . statement block_stm_opt
    (116) empty -> .
    (9) statement -> . assignation
    (10) statement -> . condition
    (11) statement -> . iteration
    (12) statement -> . function_call
    (22) assignation -> . ID = expression
    (23) condition -> . cond_if cond_else_if_opt cond_else_opt
    (30) iteration -> . iteration_opts ) DO block
    (47) function_call -> . read
    (48) function_call -> . print
    (49) function_call -> . local_function
    (50) function_call -> . list_push
    (51) function_call -> . list_pop
    (24) cond_if -> . IF HAPPENS ( expression ) DO block
    (31) iteration_opts -> . WHILE HAPPENS ( expression
    (32) iteration_opts -> . FOR ( id_or_number
    (52) read -> . READ ( base_type ID )
    (53) print -> . PRINT ( expr_params )
    (58) local_function -> . ID ( expr_params )
    (59) list_push -> . PUSH TO ID ( expression )
    (60) list_pop -> . POP LAST FROM ID ( )

    }               reduce using rule 116 (empty -> .)
    ID              shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 41
    FOR             shift and go to state 51
    READ            shift and go to state 38
    PRINT           shift and go to state 40
    PUSH            shift and go to state 54
    POP             shift and go to state 44

    iteration_opts                 shift and go to state 49
    assignation                    shift and go to state 58
    read                           shift and go to state 52
    iteration                      shift and go to state 59
    cond_if                        shift and go to state 53
    function_call                  shift and go to state 39
    list_push                      shift and go to state 50
    list_pop                       shift and go to state 42
    local_function                 shift and go to state 45
    empty                          shift and go to state 48
    statement                      shift and go to state 46
    print                          shift and go to state 47
    block_stm_opt                  shift and go to state 43
    condition                      shift and go to state 56

state 29

    (1) main -> PROGRAM variables_opt main_func block .

    $end            reduce using rule 1 (main -> PROGRAM variables_opt main_func block .)


state 30

    (14) var_body -> var_opts var_id . ; var_body_rec

    ;               shift and go to state 60


state 31

    (19) var_id -> ID . var_id_rec
    (20) var_id_rec -> . empty
    (21) var_id_rec -> . , var_id
    (116) empty -> .

    ,               shift and go to state 63
    ;               reduce using rule 116 (empty -> .)

    var_id_rec                     shift and go to state 61
    empty                          shift and go to state 62

state 32

    (18) var_opts -> ARRAY FROM . base_type FROM id_or_number
    (100) base_type -> . INT
    (101) base_type -> . FLOAT
    (102) base_type -> . STRING
    (103) base_type -> . BOOLEAN

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 14
    BOOLEAN         shift and go to state 15

    base_type                      shift and go to state 64

state 33

    (34) function_declaration -> function_type FUNCTION ID .

    (               reduce using rule 34 (function_declaration -> function_type FUNCTION ID .)


state 34

    (97) type -> ARRAY FROM base_type .

    FUNCTION        reduce using rule 97 (type -> ARRAY FROM base_type .)
    ID              reduce using rule 97 (type -> ARRAY FROM base_type .)


state 35

    (39) function_params -> empty .

    )               reduce using rule 39 (function_params -> empty .)


state 36

    (40) function_params -> type . ID function_params_rec

    ID              shift and go to state 65


state 37

    (33) function -> function_declaration ( function_params . ) { function_variables_opt function_stm function_return }

    )               shift and go to state 66


state 38

    (52) read -> READ . ( base_type ID )

    (               shift and go to state 67


state 39

    (12) statement -> function_call .

    ID              reduce using rule 12 (statement -> function_call .)
    IF              reduce using rule 12 (statement -> function_call .)
    WHILE           reduce using rule 12 (statement -> function_call .)
    FOR             reduce using rule 12 (statement -> function_call .)
    READ            reduce using rule 12 (statement -> function_call .)
    PRINT           reduce using rule 12 (statement -> function_call .)
    PUSH            reduce using rule 12 (statement -> function_call .)
    POP             reduce using rule 12 (statement -> function_call .)
    RETURN          reduce using rule 12 (statement -> function_call .)
    }               reduce using rule 12 (statement -> function_call .)


state 40

    (53) print -> PRINT . ( expr_params )

    (               shift and go to state 68


state 41

    (31) iteration_opts -> WHILE . HAPPENS ( expression

    HAPPENS         shift and go to state 69


state 42

    (51) function_call -> list_pop .

    ID              reduce using rule 51 (function_call -> list_pop .)
    IF              reduce using rule 51 (function_call -> list_pop .)
    WHILE           reduce using rule 51 (function_call -> list_pop .)
    FOR             reduce using rule 51 (function_call -> list_pop .)
    READ            reduce using rule 51 (function_call -> list_pop .)
    PRINT           reduce using rule 51 (function_call -> list_pop .)
    PUSH            reduce using rule 51 (function_call -> list_pop .)
    POP             reduce using rule 51 (function_call -> list_pop .)
    }               reduce using rule 51 (function_call -> list_pop .)
    RETURN          reduce using rule 51 (function_call -> list_pop .)
    *               reduce using rule 51 (function_call -> list_pop .)
    /               reduce using rule 51 (function_call -> list_pop .)
    +               reduce using rule 51 (function_call -> list_pop .)
    -               reduce using rule 51 (function_call -> list_pop .)
    <               reduce using rule 51 (function_call -> list_pop .)
    >               reduce using rule 51 (function_call -> list_pop .)
    EQ              reduce using rule 51 (function_call -> list_pop .)
    NEQ             reduce using rule 51 (function_call -> list_pop .)
    GTE             reduce using rule 51 (function_call -> list_pop .)
    LTE             reduce using rule 51 (function_call -> list_pop .)
    AND             reduce using rule 51 (function_call -> list_pop .)
    OR              reduce using rule 51 (function_call -> list_pop .)
    ,               reduce using rule 51 (function_call -> list_pop .)
    )               reduce using rule 51 (function_call -> list_pop .)


state 43

    (6) block -> { block_stm_opt . }

    }               shift and go to state 70


state 44

    (60) list_pop -> POP . LAST FROM ID ( )

    LAST            shift and go to state 71


state 45

    (49) function_call -> local_function .

    ID              reduce using rule 49 (function_call -> local_function .)
    IF              reduce using rule 49 (function_call -> local_function .)
    WHILE           reduce using rule 49 (function_call -> local_function .)
    FOR             reduce using rule 49 (function_call -> local_function .)
    READ            reduce using rule 49 (function_call -> local_function .)
    PRINT           reduce using rule 49 (function_call -> local_function .)
    PUSH            reduce using rule 49 (function_call -> local_function .)
    POP             reduce using rule 49 (function_call -> local_function .)
    }               reduce using rule 49 (function_call -> local_function .)
    RETURN          reduce using rule 49 (function_call -> local_function .)
    *               reduce using rule 49 (function_call -> local_function .)
    /               reduce using rule 49 (function_call -> local_function .)
    +               reduce using rule 49 (function_call -> local_function .)
    -               reduce using rule 49 (function_call -> local_function .)
    <               reduce using rule 49 (function_call -> local_function .)
    >               reduce using rule 49 (function_call -> local_function .)
    EQ              reduce using rule 49 (function_call -> local_function .)
    NEQ             reduce using rule 49 (function_call -> local_function .)
    GTE             reduce using rule 49 (function_call -> local_function .)
    LTE             reduce using rule 49 (function_call -> local_function .)
    AND             reduce using rule 49 (function_call -> local_function .)
    OR              reduce using rule 49 (function_call -> local_function .)
    ,               reduce using rule 49 (function_call -> local_function .)
    )               reduce using rule 49 (function_call -> local_function .)


state 46

    (8) block_stm_opt -> statement . block_stm_opt
    (7) block_stm_opt -> . empty
    (8) block_stm_opt -> . statement block_stm_opt
    (116) empty -> .
    (9) statement -> . assignation
    (10) statement -> . condition
    (11) statement -> . iteration
    (12) statement -> . function_call
    (22) assignation -> . ID = expression
    (23) condition -> . cond_if cond_else_if_opt cond_else_opt
    (30) iteration -> . iteration_opts ) DO block
    (47) function_call -> . read
    (48) function_call -> . print
    (49) function_call -> . local_function
    (50) function_call -> . list_push
    (51) function_call -> . list_pop
    (24) cond_if -> . IF HAPPENS ( expression ) DO block
    (31) iteration_opts -> . WHILE HAPPENS ( expression
    (32) iteration_opts -> . FOR ( id_or_number
    (52) read -> . READ ( base_type ID )
    (53) print -> . PRINT ( expr_params )
    (58) local_function -> . ID ( expr_params )
    (59) list_push -> . PUSH TO ID ( expression )
    (60) list_pop -> . POP LAST FROM ID ( )

    }               reduce using rule 116 (empty -> .)
    ID              shift and go to state 55
    IF              shift and go to state 57
    WHILE           shift and go to state 41
    FOR             shift and go to state 51
    READ            shift and go to state 38
    PRINT           shift and go to state 40
    PUSH            shift and go to state 54
    POP             shift and go to state 44

    iteration_opts                 shift and go to state 49
    assignation                    shift and go to state 58
    read                           shift and go to state 52
    iteration                      shift and go to state 59
    cond_if                        shift and go to state 53
    function_call                  shift and go to state 39
    list_push                      shift and go to state 50
    list_pop                       shift and go to state 42
    local_function                 shift and go to state 45
    empty                          shift and go to state 48
    statement                      shift and go to state 46
    print                          shift and go to state 47
    block_stm_opt                  shift and go to state 72
    condition                      shift and go to state 56

state 47

    (48) function_call -> print .

    ID              reduce using rule 48 (function_call -> print .)
    IF              reduce using rule 48 (function_call -> print .)
    WHILE           reduce using rule 48 (function_call -> print .)
    FOR             reduce using rule 48 (function_call -> print .)
    READ            reduce using rule 48 (function_call -> print .)
    PRINT           reduce using rule 48 (function_call -> print .)
    PUSH            reduce using rule 48 (function_call -> print .)
    POP             reduce using rule 48 (function_call -> print .)
    }               reduce using rule 48 (function_call -> print .)
    RETURN          reduce using rule 48 (function_call -> print .)
    *               reduce using rule 48 (function_call -> print .)
    /               reduce using rule 48 (function_call -> print .)
    +               reduce using rule 48 (function_call -> print .)
    -               reduce using rule 48 (function_call -> print .)
    <               reduce using rule 48 (function_call -> print .)
    >               reduce using rule 48 (function_call -> print .)
    EQ              reduce using rule 48 (function_call -> print .)
    NEQ             reduce using rule 48 (function_call -> print .)
    GTE             reduce using rule 48 (function_call -> print .)
    LTE             reduce using rule 48 (function_call -> print .)
    AND             reduce using rule 48 (function_call -> print .)
    OR              reduce using rule 48 (function_call -> print .)
    ,               reduce using rule 48 (function_call -> print .)
    )               reduce using rule 48 (function_call -> print .)


state 48

    (7) block_stm_opt -> empty .

    }               reduce using rule 7 (block_stm_opt -> empty .)


state 49

    (30) iteration -> iteration_opts . ) DO block

    )               shift and go to state 73


state 50

    (50) function_call -> list_push .

    ID              reduce using rule 50 (function_call -> list_push .)
    IF              reduce using rule 50 (function_call -> list_push .)
    WHILE           reduce using rule 50 (function_call -> list_push .)
    FOR             reduce using rule 50 (function_call -> list_push .)
    READ            reduce using rule 50 (function_call -> list_push .)
    PRINT           reduce using rule 50 (function_call -> list_push .)
    PUSH            reduce using rule 50 (function_call -> list_push .)
    POP             reduce using rule 50 (function_call -> list_push .)
    }               reduce using rule 50 (function_call -> list_push .)
    RETURN          reduce using rule 50 (function_call -> list_push .)
    *               reduce using rule 50 (function_call -> list_push .)
    /               reduce using rule 50 (function_call -> list_push .)
    +               reduce using rule 50 (function_call -> list_push .)
    -               reduce using rule 50 (function_call -> list_push .)
    <               reduce using rule 50 (function_call -> list_push .)
    >               reduce using rule 50 (function_call -> list_push .)
    EQ              reduce using rule 50 (function_call -> list_push .)
    NEQ             reduce using rule 50 (function_call -> list_push .)
    GTE             reduce using rule 50 (function_call -> list_push .)
    LTE             reduce using rule 50 (function_call -> list_push .)
    AND             reduce using rule 50 (function_call -> list_push .)
    OR              reduce using rule 50 (function_call -> list_push .)
    ,               reduce using rule 50 (function_call -> list_push .)
    )               reduce using rule 50 (function_call -> list_push .)


state 51

    (32) iteration_opts -> FOR . ( id_or_number

    (               shift and go to state 74


state 52

    (47) function_call -> read .

    ID              reduce using rule 47 (function_call -> read .)
    IF              reduce using rule 47 (function_call -> read .)
    WHILE           reduce using rule 47 (function_call -> read .)
    FOR             reduce using rule 47 (function_call -> read .)
    READ            reduce using rule 47 (function_call -> read .)
    PRINT           reduce using rule 47 (function_call -> read .)
    PUSH            reduce using rule 47 (function_call -> read .)
    POP             reduce using rule 47 (function_call -> read .)
    }               reduce using rule 47 (function_call -> read .)
    RETURN          reduce using rule 47 (function_call -> read .)
    *               reduce using rule 47 (function_call -> read .)
    /               reduce using rule 47 (function_call -> read .)
    +               reduce using rule 47 (function_call -> read .)
    -               reduce using rule 47 (function_call -> read .)
    <               reduce using rule 47 (function_call -> read .)
    >               reduce using rule 47 (function_call -> read .)
    EQ              reduce using rule 47 (function_call -> read .)
    NEQ             reduce using rule 47 (function_call -> read .)
    GTE             reduce using rule 47 (function_call -> read .)
    LTE             reduce using rule 47 (function_call -> read .)
    AND             reduce using rule 47 (function_call -> read .)
    OR              reduce using rule 47 (function_call -> read .)
    ,               reduce using rule 47 (function_call -> read .)
    )               reduce using rule 47 (function_call -> read .)


state 53

    (23) condition -> cond_if . cond_else_if_opt cond_else_opt
    (25) cond_else_if_opt -> . empty
    (26) cond_else_if_opt -> . cond_else_if cond_else_if_opt
    (116) empty -> .
    (27) cond_else_if -> . OR IF HAPPENS ( expression ) DO block

    ELSE            reduce using rule 116 (empty -> .)
    ID              reduce using rule 116 (empty -> .)
    IF              reduce using rule 116 (empty -> .)
    WHILE           reduce using rule 116 (empty -> .)
    FOR             reduce using rule 116 (empty -> .)
    READ            reduce using rule 116 (empty -> .)
    PRINT           reduce using rule 116 (empty -> .)
    PUSH            reduce using rule 116 (empty -> .)
    POP             reduce using rule 116 (empty -> .)
    }               reduce using rule 116 (empty -> .)
    RETURN          reduce using rule 116 (empty -> .)
    OR              shift and go to state 77

    cond_else_if_opt               shift and go to state 75
    empty                          shift and go to state 76
    cond_else_if                   shift and go to state 78

state 54

    (59) list_push -> PUSH . TO ID ( expression )

    TO              shift and go to state 79


state 55

    (22) assignation -> ID . = expression
    (58) local_function -> ID . ( expr_params )

    =               shift and go to state 80
    (               shift and go to state 81


state 56

    (10) statement -> condition .

    ID              reduce using rule 10 (statement -> condition .)
    IF              reduce using rule 10 (statement -> condition .)
    WHILE           reduce using rule 10 (statement -> condition .)
    FOR             reduce using rule 10 (statement -> condition .)
    READ            reduce using rule 10 (statement -> condition .)
    PRINT           reduce using rule 10 (statement -> condition .)
    PUSH            reduce using rule 10 (statement -> condition .)
    POP             reduce using rule 10 (statement -> condition .)
    RETURN          reduce using rule 10 (statement -> condition .)
    }               reduce using rule 10 (statement -> condition .)


state 57

    (24) cond_if -> IF . HAPPENS ( expression ) DO block

    HAPPENS         shift and go to state 82


state 58
